# django-personal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer.prod.json  docker-compose.yml
app_finanzas_personales/: apps.py  models.py  urls.py  views.py
app_inicio/: apps.py  models.py  urls.py  views.py
app_tutoriales_front/: apps.py  urls.py  views.py
base_django/: asgi.py  settings.py  urls.py  wsgi.py
my_static_files/css/: style.css
my_static_files/css/app_inicio/: style.css
my_static_files/js/base/: base.js
my_static_files/js/index/: index.js
templates/: base.html
templates/app_finanzas_personales/: index_finanzas_personales.html
templates/app_inicio/: index.html
templates/app_tutoriales_front/: index_tutoriales_front.html
templates/menu/: menu.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  registro.html
