[project]
name = "django-service"
version = "0.1.0"
description = "Proyecto personal"
readme = "README.md"
requires-python = ">=3.14,<3.16"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=6.0,<7.0",
    "django-crispy-forms>=2.5",
    "django-environ>=0.13.0",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
